syntax = "proto3";

package group.v1alpha;

message Empty {

}

message CreateGroupRequest {
    string name = 1;
}

message CreateGroupResponse {
    string group_id = 1;
    string name = 2;
}

message GetGroupRequest {
    string group_id = 1;
}


message GetGroupResponse {
    string group_id = 1;
    string name = 2;
}

message GetAllGroupsResponse {
    repeated GetGroupResponse groups = 1;
}

service GroupService {
    rpc CreateGroup (CreateGroupRequest) returns (CreateGroupResponse);
    rpc FindGroup (GetGroupRequest) returns (GetGroupResponse);
    rpc FindAllGroup(Empty) returns (GetAllGroupsResponse);
}